首页细节完善 去掉无关的图片

--- a/getCoupon.html
+++ b/getCoupon.html
@@ -112,13 +112,13 @@
         <div class="second-title am-margin-vertical" style="height: 2px;"></div>
         <div class="am-text-sm text-grey">
             <div>
-                <i class="iconfont">&#xe60f;</i><span class="text-orange">生日当日有效</span>
+                <i class="iconfont">&#xe60f;</i><span class="text-orange padding-xxs">生日当日有效</span>
             </div>
             <div>
-                <i class="iconfont">&#xe610;</i><span>午市、晚市有效</span>
+                <i class="iconfont">&#xe610;</i><span class="padding-xxs">午市、晚市有效</span>
             </div>
             <div>
-                <i class="iconfont">&#xe611;</i><span>活动期间，每人可领取2次，核销后可再次领取<br/>
+                <i class="iconfont">&#xe611;</i><span class="padding-xxs">活动期间，每人可领取2次，核销后可再次领取<br/>
                 <span class="am-padding-left">前100人有效</span></span>
             </div>
         </div>
