--- a/point.html
+++ b/point.html
@@ -53,13 +53,12 @@
             欲积分兑换，请下载并使用上宾APP
         </button>
     </div>
-    <div class="second-title" style="height: 8px"></div>
+    <div class="liner"></div>
 </div>
-<div style="height: 180px"></div>
+<div style="height: 178px"></div>
 <div class="bg-grey-white am-padding-sm am-text-sm text-grey">
     <strong class="am-text-default text-black am-margin-right-sm">本月</strong>
     <span>获取积分</span>
-
     <span class="text-orange padding-xxs">1000.0</span>
     <span class="am-padding-left-sm">兑换消耗积分</span>
     <span class="padding-xxs">120.0</span>
