--- a/power.html
+++ b/power.html
@@ -84,17 +84,17 @@
 <div class="text-grey">
     <a href="remainder.html">
         <div class="am-padding-sm">
-            <i class="iconfont">&#xe60c;</i>
+            <i class="iconfont text-grey">&#xe60c;</i>
             <span class="padding-xxs text-black">充值余额</span>
-            <span class="am-fr">￥2015.0<i class="iconfont am-vertical-align-middle padding-xxs">&#xe605;</i></span>
+            <span class="am-fr">￥2015.0<i class="iconfont am-vertical-align-middle padding-xxs text-grey">&#xe605;</i></span>
         </div>
     </a>
     <hr/>
     <a href="point.html">
         <div class="am-padding-sm">
-            <i class="iconfont">&#xe60b;</i>
+            <i class="iconfont text-grey">&#xe60b;</i>
             <span class="padding-xxs text-black">会员积分</span>
-            <span class="am-fr">￥2015.0<i class="iconfont am-vertical-align-middle padding-xxs">&#xe605;</i></span>
+            <span class="am-fr">￥2015.0<i class="iconfont am-vertical-align-middle padding-xxs text-grey">&#xe605;</i></span>
         </div>
     </a>
     <hr/>
@@ -115,7 +115,7 @@
                         </div>
                     </div>
                     <div class="am-u-sm-3 equal-height text-white am-text-center ">
-                        <div style="background-color: #ff534f;border-radius: 0 5px;"
+                        <div style="background-color: #ff534f;"
                              class="equal-height am-padding-vertical-sm">
                             <img src="assets/images/dollar.png" alt="dollar">
                             <div class="am-text-xs am-margin-top-xs">代金券</div>
