--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
         <div class="am-header-right am-header-nav am-dropdown text-black logic hide" data-am-dropdown>
             <a class="am-dropdown-toggle" href="#" data-am-dropdown-toggle>
-                <h4 class="text-black" data-am-dropdown-toggle><img src="assets/images/user.png"> 小邦</h4>
+                <h4 class="text-black" data-am-dropdown-toggle><span
+                        style="border: 1px #a4a4a4 solid; padding:2px;border-radius: 5px;margin-right: 5px"><i
+                        class="text-grey iconfont">&#xe616;</i></span>小邦</h4>
             </a>
             <ul class="am-dropdown-content am-radius am-text-center">
                 <li><a href="#">重置密码</a></li>
@@ -107,28 +109,51 @@
 <div id="activity">
     <hr/>
     <div class="am-g am-padding-vertical">
-        <div class="am-u-sm-1">
-            <img src="assets/images/quan.png" class="icon am-margin-top-xs">
-        </div>
-        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
-        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <a href="getCoupon.html">
-                <button type="button" class="am-btn am-btn-xs button">
-                    领劵到特权
-                </button>
-            </a>
+        <a href="getCoupon.html">
+            <div class="am-u-sm-1">
+                <img src="assets/images/quan.png" class="icon am-margin-top-xs">
+            </div>
+        </a>
+        <a href="getCoupon.html">
+            <div class="am-u-sm-6 am-padding-left am-text-sm am-fl">生日特惠，生日当天返生日当天返劵</div>
+        </a>
+        <div class="am-u-sm-5 am-fl text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
+            <button type="button" class="am-btn am-btn-xs button" data-am-modal="{target: '#my-confirm'}">
+                领劵到特权
+            </button>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
     <hr/>
     <div class="am-g am-padding-vertical">
-        <div class="am-u-sm-1">
-            <img src="assets/images/chong.png" class="icon am-margin-top-xs">
+        <a href="getCoupon.html">
+            <div class="am-u-sm-1">
+                <img src="assets/images/chong.png" class="icon am-margin-top-xs">
+            </div>
+        </a>
+        <a href="getCoupon.html">
+            <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        </a>
+        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
+            <button type="button" class="am-btn am-btn-xs button" data-am-modal="{target: '#my-confirm'}">
+                领劵到特权
+            </button>
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
-        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+    </div>
+    <hr/>
+    <div class="am-g am-padding-vertical hide">
+        <a href="getCoupon.html">
+            <div class="am-u-sm-1">
+                <img src="assets/images/chong.png" class="icon am-margin-top-xs">
+            </div>
+        </a>
+        <a href="getCoupon.html">
+            <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        </a>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
             <a href="getCoupon.html">
-                <button type="button" class="am-btn am-btn-xs button">
+                <button type="button" class="am-btn am-btn-xs button" data-am-modal="{target: '#my-confirm'}">
                     领劵到特权
                 </button>
             </a>
@@ -137,40 +162,31 @@
     </div>
     <hr class="hide"/>
     <div class="am-g am-padding-vertical hide">
-        <div class="am-u-sm-1">
-            <img src="assets/images/chong.png" class="icon am-margin-top-xs">
-        </div>
-        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <a href="getCoupon.html">
+            <div class="am-u-sm-1">
+                <img src="assets/images/chong.png" class="icon am-margin-top-xs">
+            </div>
+        </a>
+        <a href="getCoupon.html">
+            <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        </a>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <a href="getCoupon.html">
-                <button type="button" class="am-btn am-btn-xs button">
-                    领劵到特权
-                </button>
-            </a>
+            <button type="button" class="am-btn am-btn-xs button" data-am-modal="{target: '#my-confirm'}">
+                领劵到特权
+            </button>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
     <hr class="hide"/>
     <div class="am-g am-padding-vertical hide">
-        <div class="am-u-sm-1">
-            <img src="assets/images/chong.png" class="icon am-margin-top-xs">
-        </div>
-        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
-        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <a href="getCoupon.html">
-                <button type="button" class="am-btn am-btn-xs button">
-                    领劵到特权
-                </button>
-            </a>
-            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
-        </div>
-    </div>
-    <hr class="hide"/>
-    <div class="am-g am-padding-vertical hide">
-        <div class="am-u-sm-1">
-            <img src="assets/images/chong.png" class="icon am-margin-top-xs">
-        </div>
-        <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        <a href="getCoupon.html">
+            <div class="am-u-sm-1">
+                <img src="assets/images/chong.png" class="icon am-margin-top-xs">
+            </div>
+        </a>
+        <a href="getCoupon.html">
+            <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        </a>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
             <a href="getCoupon.html">
                 <button type="button" class="am-btn am-btn-xs button">
@@ -182,10 +198,10 @@
     </div>
 </div>
 <hr/>
-<div class="am-text-center am-padding-xs" id="more" style="background: #f9f9f9">
+<div class="am-text-center am-padding-xs text-grey am-text-xs" id="more" style="background: #f9f9f9">
     更多优惠 ▼
 </div>
-<div class="am-padding second-title am-text-center">
+<div class="title am-text-center">
     <img src="assets/images/star@1x.png" alt=""> &nbsp;&nbsp;买单可享&nbsp;&nbsp;
     <img src="assets/images/star@1x.png" alt="">
 </div>
@@ -260,15 +276,15 @@
     </div>
 </div>
 
-<div class="am-padding second-title am-text-center">店铺相关</div>
+<div class="title am-text-center">店铺相关</div>
 <div class="">
-    <div class="am-padding-sm"><i class="iconfont text-grey">&#xe604;</i>&nbsp;&nbsp;武宁路101号我格广场506室</div>
+    <div class="am-padding"><i class="iconfont text-grey">&#xe604;</i>&nbsp;&nbsp;武宁路101号我格广场506室</div>
     <hr/>
-    <div class="am-padding-sm"><i class="iconfont text-grey">&#xe603;</i>&nbsp;&nbsp;武宁路101号我格广场506室</div>
+    <div class="am-padding"><i class="iconfont text-grey">&#xe603;</i>&nbsp;&nbsp;武宁路101号我格广场506室</div>
     <hr/>
-    <div class="am-padding-sm"><i class="iconfont text-grey">&#xe602;</i>&nbsp;&nbsp;武宁路101号我格广场506室</div>
+    <div class="am-padding"><i class="iconfont text-grey">&#xe602;</i>&nbsp;&nbsp;武宁路101号我格广场506室</div>
 </div>
-<div class="am-padding  second-title am-text-center">往来上宾</div>
+<div class="title am-text-center">往来上宾</div>
 <div class="am-padding">
     <div>
         <img class="am-radius" alt="40*40"
@@ -281,6 +297,7 @@
              src="assets/images/avatar.jpg" width="40"
              height="40"/>
         <i class="iconfont text-grey">&#xe601;</i>
+        <span class="am-fr text-grey">22</span>
 
     </div>
 </div>
@@ -302,6 +319,19 @@
     <div id="footer" class="am-hide am-text-center am-text-xs am-padding-bottom-xs"
          data-am-scrollspy="{animation:'fade'}">
         现在下载上宾APP，尊享"智付"体验，特权由你 <img src="assets/images/download@1x.png" alt="下载" style="height: 15px">
+    </div>
+</div>
+
+<div class="am-modal am-modal-confirm" tabindex="-1" id="my-confirm">
+    <div class="am-modal-dialog">
+        <div class="am-modal-hd">上宾提醒你</div>
+        <div class="am-modal-bd">
+            领券成功！
+        </div>
+        <div class="am-modal-footer">
+            <span id="card" class="am-modal-btn" data-am-modal-confirm>去看看</span>
+            <span class="am-modal-btn" data-am-modal-cancel>知道了！</span>
+        </div>
     </div>
 </div>
 <script src="assets/js/jquery.min.js"></script>
