--- a/index-copy.html
+++ b/index-copy.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="">
     <meta name="viewport"
           content="width=device-width, initial-scale=1,maximum-scale=1, user-scalable=no">
-    <title>很高兴遇到你 (中山北路店)</title>
+    <title>商户首页</title>
 
     <!-- Set render engine for 360 browser -->
     <meta name="renderer" content="webkit">
@@ -27,33 +27,21 @@
 
     <link rel="stylesheet" href="assets/css/amazeui.min.css">
     <link rel="stylesheet" href="assets/css/common.css">
-    <style>
-        .button1 {
-            width: 6rem;
-            height: 2.3rem;
-            color: white;
-            background-color: #ff6966;
-            border-radius: 3px;
-            text-align: center;
-            vertical-align: text-top;
-        }
-    </style>
 
 </head>
 
 <body>
-<div style="position: fixed;z-index: 100" class="am-g am-hide" id="header">
+<div style="position: fixed;z-index: 100" class="am-g">
     <header data-am-widget="header" class="am-header am-header-default bg-white">
-        <div class="am-header-left " style="width: 60%">
-            <div class="text-black am-text-truncate">很高兴遇到你 (中山北路)</div>
+        <div class="am-header-left ">
+            <img src="assets/i/favicon.png" style="width: 80px;height: 30px">
         </div>
 
-        <div class="am-header-right am-header-nav am-dropdown text-black logic" data-am-dropdown>
-            <a class="am-dropdown-toggle " href="#" data-am-dropdown-toggle>
-                <buttpn class="border-radius am-btn button1" data-am-dropdown-toggle>
-                    <img src="assets/images/admin&setting.png" width="19px" height="19px"
-                         style="vertical-align: text-bottom"> 小邦
-                </buttpn>
+        <div class="am-header-right am-header-nav am-dropdown text-black logic hide" data-am-dropdown>
+            <a class="am-dropdown-toggle" href="#" data-am-dropdown-toggle>
+                <h4 class="text-black" data-am-dropdown-toggle><span
+                        style="border: 1px #a4a4a4 solid; padding:2px;border-radius: 5px;margin-right: 5px"><i
+                        class="text-grey iconfont">&#xe616;</i></span>小邦</h4>
             </a>
             <ul class="am-dropdown-content am-radius am-text-center">
                 <li><a href="#">重置密码</a></li>
@@ -63,32 +51,16 @@
                 <li><a id="logic_out" href="#">登出</a></li>
             </ul>
         </div>
-        <!--<div class="am-header-right am-header-nav text-black unlogic">-->
-        <!--有上宾账号?-->
-        <!--<span class="text-orange" id="logic">直接登陆</span>-->
-        <!--</div>-->
+        <div class="am-header-right am-header-nav text-black unlogic">
+            有上宾账号?
+            <span class="text-orange" id="logic">直接登陆</span>
+        </div>
     </header>
     <hr/>
 </div>
+<div style="height: 50px"></div>
 <div style="background: url('assets/images/bg1.jpg')">
-    <div class="am-padding am-text-right ">
-        <a class="am-dropdown-toggle " href="#" data-am-dropdown-toggle>
-            <buttpn class="border-radius am-btn back" style=" padding: 5px 12px;
-    color: white;" data-am-dropdown-toggle>
-                <img src="assets/images/admin&setting.png" width="19px" height="19px"
-                     style="vertical-align: text-bottom">
-                小邦
-            </buttpn>
-        </a>
-        <ul class="am-dropdown-content am-radius am-text-center">
-            <li><a href="#">重置密码</a></li>
-            <li class="am-divider"></li>
-            <li><a href="birth.html">补全生日</a></li>
-            <li class="am-divider"></li>
-            <li><a id="" href="#">登出</a></li>
-        </ul>
-    </div>
-    <div class="am-text-center  am-padding-bottom-sm">
+    <div class="am-text-center  am-padding-vertical-sm">
         <div class="back am-u-sm-11  am-radius  am-u-sm-centered am-text-left">
             <div class="box am-text-lg am-padding-bottom-sm">
                 很高兴遇到你 (中山北路店)
@@ -108,31 +80,23 @@
     </div>
 </div>
 <hr/>
-<div class="am-text-center am-text-xs am-padding-sm" style="background: url('assets/images/ad-bg.jpg')">
-    下载上宾APP，尊享智付体验，特权由你 <img src="assets/images/download@1x.png" alt="下载" width="20px" style="vertical-align: middle">
-</div>
-<div class="title am-text-center">
-
-    <img src="assets/images/star@1x.png" alt="星星"> &nbsp;&nbsp;活动进行中&nbsp;&nbsp;
-    <img src="assets/images/star@1x.png" alt="星星">
-</div>
 <a href="vip.html">
     <div class="am-padding-vertical unlogic"
          style="background: url('assets/images/leftColor.png') no-repeat; background-size: contain">
         <div class="am-g am-inline">
             <div class="am-u-sm-1">
-                <img src="assets/images/ico2.png" class="icon">
+                <img src="assets/images/hui.png" class="icon">
             </div>
             <div class="am-u-sm-6 am-padding-left am-text-sm">免费领取会员啦！积分
                 <div class="text-grey am-text-xs">2015.07.01前有效</div>
             </div>
-            <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl" style="line-height:2rem ">
-                <div class="am-text-truncate">200人领取</div>
+            <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
                 <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
             </div>
         </div>
     </div>
 </a>
+<hr/>
 <a href="vip.html" class="hide logic">
     <div class="am-g am-padding-vertical" style="background: url('assets/images/leftColor.png') no-repeat;">
         <div class=" am-u-sm-offset-1 am-u-sm-9 am-padding-left am-text-sm">你是会员会员会员</div>
@@ -143,20 +107,19 @@
 </a>
 <div id="activity">
     <hr/>
-
     <div class="am-g am-padding-vertical">
         <a href="getCoupon.html">
             <div class="am-u-sm-1">
-                <img src="assets/images/ico1.png" class="icon am-margin-top-xs">
+                <img src="assets/images/quan.png" class="icon am-margin-top-xs">
             </div>
         </a>
         <a href="getCoupon.html">
-            <div class="am-u-sm-7 am-padding-right-0 am-padding-left am-text-sm">充100送50
-            <div class="am-text-xs text-grey">2015.7.1前有效</div>
-            </div>
+            <div class="am-u-sm-6 am-padding-left am-text-sm am-fl">生日特惠，生日当天返生日当天返劵</div>
         </a>
-        <div class="am-u-sm-4 text-grey am-text-xs am-text-right am-padding-right-xl" style="line-height:2rem ">
-            <div class="am-text-truncate">200人领取</div>
+        <div class="am-u-sm-5 am-fl text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
+            <button type="button" class="am-btn am-btn-xs button" data-am-modal="{target: '#my-confirm'}">
+                领劵到特权
+            </button>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
@@ -164,18 +127,15 @@
     <div class="am-g am-padding-vertical">
         <a href="getCoupon.html">
             <div class="am-u-sm-1">
-                <img src="assets/images/ico3.png" class="icon am-margin-top-xs">
+                <img src="assets/images/chong.png" class="icon am-margin-top-xs">
             </div>
         </a>
         <a href="getCoupon.html">
-            <div class="am-u-sm-7 am-padding-left am-text-sm am-fl am-padding-right-0">生日特惠，生日当天领券使用，送招牌菜五选一券
-                <div class="am-text-xs text-grey">领券后当月可用，2015.7.1前有效</div>
-            </div>
+            <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         </a>
-        <div class="am-u-sm-4 am-fl text-grey am-text-xs am-text-right am-padding-right-xl" style="line-height:2rem ">
-            <div class="am-text-truncate">200人领取</div>
-            <button type="button" class="am-btn am-btn-xs button1" data-am-modal="{target: '#my-confirm'}">
-                领取
+        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
+            <button type="button" class="am-btn am-btn-xs button" data-am-modal="{target: '#my-confirm'}">
+                领劵到特权
             </button>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
@@ -184,34 +144,65 @@
     <div class="am-g am-padding-vertical hide">
         <a href="getCoupon.html">
             <div class="am-u-sm-1">
-                <img src="assets/images/ico3.png" class="icon am-margin-top-xs">
+                <img src="assets/images/chong.png" class="icon am-margin-top-xs">
             </div>
         </a>
         <a href="getCoupon.html">
-            <div class="am-u-sm-7 am-padding-right-0 am-padding-left am-text-sm">生日特惠，生日当天可领券
-                <div class="am-text-xs text-grey">领券后当月可用，2015.7.1前有效</div>
-            </div>
+            <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         </a>
-        <div class="am-u-sm-4 text-grey am-text-xs am-text-right am-padding-right-xl" style="line-height:2rem ">
-            <div class="am-text-truncate">200人领取</div>
+        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
             <a href="getCoupon.html">
-                <button type="button" class="am-btn am-btn-xs button1" data-am-modal="{target: '#my-confirm'}">
-                    领取
+                <button type="button" class="am-btn am-btn-xs button" data-am-modal="{target: '#my-confirm'}">
+                    领劵到特权
                 </button>
             </a>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
-
-
+    <hr class="hide"/>
+    <div class="am-g am-padding-vertical hide">
+        <a href="getCoupon.html">
+            <div class="am-u-sm-1">
+                <img src="assets/images/chong.png" class="icon am-margin-top-xs">
+            </div>
+        </a>
+        <a href="getCoupon.html">
+            <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        </a>
+        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
+            <button type="button" class="am-btn am-btn-xs button" data-am-modal="{target: '#my-confirm'}">
+                领劵到特权
+            </button>
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+        </div>
+    </div>
+    <hr class="hide"/>
+    <div class="am-g am-padding-vertical hide">
+        <a href="getCoupon.html">
+            <div class="am-u-sm-1">
+                <img src="assets/images/chong.png" class="icon am-margin-top-xs">
+            </div>
+        </a>
+        <a href="getCoupon.html">
+            <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
+        </a>
+        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
+            <a href="getCoupon.html">
+                <button type="button" class="am-btn am-btn-xs button">
+                    领劵到特权
+                </button>
+            </a>
+            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+        </div>
+    </div>
 </div>
 <hr/>
 <div class="am-text-center am-padding-xs text-grey am-text-xs" id="more" style="background: #f9f9f9">
     更多优惠 ▼
 </div>
 <div class="title am-text-center">
-    <img src="assets/images/star@1x.png" alt="星星"> &nbsp;&nbsp;买单可享&nbsp;&nbsp;
-    <img src="assets/images/star@1x.png" alt="星星">
+    <img src="assets/images/star@1x.png" alt=""> &nbsp;&nbsp;买单可享&nbsp;&nbsp;
+    <img src="assets/images/star@1x.png" alt="">
 </div>
 <div>
     <a href="getPoint.html">
@@ -305,21 +296,29 @@
              src="assets/images/avatar.jpg" width="40"
              height="40"/>
         <i class="iconfont text-grey">&#xe601;</i>
-        <span class="am-fr text-grey">22人</span>
+        <span class="am-fr text-grey">22</span>
 
     </div>
 </div>
-<div style="height: 70px" class="second-title"></div>
+<div style="height: 100px" class="second-title"></div>
 <div class="am-g  bg-white" style="position: fixed;bottom: 0;">
     <hr/>
     <div class="am-g am-margin-vertical-sm ">
         <div class="am-u-sm-12  am-text-center">
             <button id="power" class="am-u-sm-10 am-u-sm-offset-1 am-btn am-radius bg-orange text-white">
                 召唤特权
+                智付买单
             </button>
         </div>
     </div>
-
+    <div class="am-text-center am-text-xs text-orange"><img src="assets/images/pay.png">
+        上宾会自动发匹配最佳优惠（已有12人支付买单）
+    </div>
+    <hr style="margin: 5px 0"/>
+    <div id="footer" class="am-hide am-text-center am-text-xs am-padding-bottom-xs"
+         data-am-scrollspy="{animation:'fade'}">
+        现在下载上宾APP，尊享"智付"体验，特权由你 <img src="assets/images/download@1x.png" alt="下载" style="height: 15px">
+    </div>
 </div>
 
 <div class="am-modal am-modal-confirm" tabindex="-1" id="my-confirm">
@@ -337,41 +336,6 @@
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/amazeui.min.js"></script>
 <script src="assets/js/js.cookie.js"></script>
-<!--<script src="assets/js/index.js"></script>-->
-<script>
-    $('#more').on('click', function () {
-        $(this).text().length != 4 ? $(this).text("收起 ▲") : $(this).text("更多优惠 ▼");
-        $('#activity .am-g').each(function (index) {
-            if (index > 1) {
-                $(this).slideToggle(300);
-                $(this).next().slideToggle(300);
-            }
-        });
-    });
-    var preScroll = 0;
-    $(window).scroll(function () {
-        var yScroll = self.pageYOffset;
-        if (yScroll > 5) {
-            $('#header').removeClass('am-hide');
-
-        }
-        else {
-          $('#header').addClass('am-hide');
-
-        }
-//        if (yScroll <= preScroll||yScroll<=2) {
-//            $('#header').addClass('am-hide');
-//        }
-//        else {
-//            $('#header').removeClass('am-hide');
-//        }
-        preScroll = yScroll;
-    });
-    if (Cookies.get('name')) {
-        $('.logic').show();
-        $('.unlogic').hide();
-
-    }
-</script>
+<script src="assets/js/index.js"></script>
 </body>
 </html>
